Nested router-outlet routing

--- a/package.json
+++ b/package.json
@@ -14,18 +14,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.2.4",
+    "@angular/cdk": "^2.0.0-beta.8",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/core": "^4.2.4",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
+    "@angular/material": "^2.0.0-beta.8",
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
-    "concurrently": "^1.0.0",
     "body-parser": "^1.17.2",
+    "concurrently": "^1.0.0",
     "core-js": "^2.4.1",
     "express": "^4.15.4",
+    "font-awesome": "^4.7.0",
     "morgan": "^1.8.2",
     "rxjs": "^5.4.2",
     "serve-function": "^0.5.1",
