--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "angular4-carousel": "^3.1.3",
     "body-parser": "^1.17.2",
     "concurrently": "^1.0.0",
     "core-js": "^2.4.1",
