--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.15.4",
     "font-awesome": "^4.7.0",
     "morgan": "^1.8.2",
+    "ngx-slick": "^0.1.3",
     "rxjs": "^5.4.2",
     "serve-function": "^0.5.1",
     "zone.js": "^0.8.14"
