--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@types/jquery": "^3.2.11",
     "angular4-carousel": "^3.1.3",
     "body-parser": "^1.17.2",
     "concurrently": "^1.0.0",
     "core-js": "^2.4.1",
     "express": "^4.15.4",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1",
     "morgan": "^1.8.2",
     "ngx-slick": "^0.1.3",
     "rxjs": "^5.4.2",
