--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "@types/jquery": "^3.2.11",
+    "angular-4-data-table": "^0.2.3",
     "angular4-carousel": "^3.1.3",
     "body-parser": "^1.17.2",
     "concurrently": "^1.0.0",
