--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "@types/jquery": "^3.2.11",
+    "angular-tinymce": "^3.1.3",
+    "angular2-tinymce": "^2.1.2",
     "angular4-carousel": "^3.1.3",
     "body-parser": "^1.17.2",
     "concurrently": "^1.0.0",
@@ -37,6 +39,7 @@
     "ngx-slick": "^0.1.3",
     "rxjs": "^5.4.2",
     "serve-function": "^0.5.1",
+    "tinymce": "^4.6.6",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
