--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "angular2-tinymce": "^2.1.2",
     "angular4-carousel": "^3.1.3",
     "body-parser": "^1.17.2",
+    "bootstrap": "^4.0.0-beta",
     "concurrently": "^1.0.0",
     "core-js": "^2.4.1",
     "express": "^4.15.4",
@@ -37,6 +38,7 @@
     "jquery": "^3.2.1",
     "morgan": "^1.8.2",
     "ngx-slick": "^0.1.3",
+    "popper.js": "^1.12.5",
     "rxjs": "^5.4.2",
     "serve-function": "^0.5.1",
     "tinymce": "^4.6.6",
@@ -46,6 +48,7 @@
     "@angular/cli": "1.3.0",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
+    "@types/bootstrap": "^3.3.36",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
