--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "morgan": "^1.8.2",
     "ngx-slick": "^0.1.3",
     "popper.js": "^1.12.5",
+    "primeng": "^4.2.1",
     "rxjs": "^5.4.2",
     "serve-function": "^0.5.1",
     "tinymce": "^4.6.6",
