--- a/package.json
+++ b/package.json
@@ -33,15 +33,24 @@
     "bootstrap": "^4.0.0-beta",
     "concurrently": "^1.0.0",
     "core-js": "^2.4.1",
+    "easy-pie-chart": "^2.1.7",
     "express": "^4.15.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "jquery-flot": "^0.8.3",
+    "jquery-sparkline": "^2.4.0",
+    "jvectormap": "^2.0.4",
+    "moment": "^2.18.1",
     "morgan": "^1.8.2",
+    "morris.js": "^0.5.0",
+    "ng2modules-flot": "0.0.1",
     "ngx-slick": "^0.1.3",
     "popper.js": "^1.12.5",
     "primeng": "^4.2.1",
+    "raphael": "^2.2.7",
     "rxjs": "^5.4.2",
     "serve-function": "^0.5.1",
+    "skycons": "^1.0.0",
     "tinymce": "^4.6.6",
     "zone.js": "^0.8.14"
   },
@@ -53,6 +62,7 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "@types/systemjs": "^0.20.5",
     "codelyzer": "~3.1.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
