--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "angular4-carousel": "^3.1.3",
     "body-parser": "^1.17.2",
     "bootstrap": "^4.0.0-beta",
+    "busboy-body-parser": "^0.3.1",
     "c3": "^0.4.18",
     "concurrently": "^1.0.0",
     "core-js": "^2.4.1",
@@ -49,6 +50,8 @@
     "mongoose": "^4.12.2",
     "morgan": "^1.8.2",
     "morris.js": "^0.5.0",
+    "multer": "^1.3.0",
+    "ng2-file-upload": "^1.3.0",
     "ng2modules-flot": "0.0.1",
     "ngx-slick": "^0.1.3",
     "popper.js": "^1.12.5",
